# peo-promotion-center

./: .cgr-hash-cache.json  .env.example  .gitignore  AGENTS.md  Makefile  README.md  login_y_descarga_imagen.ps1  pyproject.toml
.devcontainer/: devcontainer.json
docs/: architecture.md  configuration.md  development.md  inpainting.md  scrape-result-display.md  tag-overlay.md
prompts/: mailing.txt  preview_text_mailing.txt  redes_sociales.txt
src/peo_promotion_center/: __init__.py  main.py
src/peo_promotion_center/backend/: __init__.py  compositing.py  content_generator.py  exceptions.py  image_processor.py  inpainter.py  models.py  scraper.py
src/peo_promotion_center/frontend/: __init__.py  app.py  auth.py  cookies.py  crop_refine_ui.py  inpaint_ui.py  scrape_display.py  session.py  zip_builder.py
src/peo_promotion_center/frontend/canvas_component/: index.html
tests/integration/: test_content_generator.py  test_end_to_end.py  test_example_integration.py  test_scraper.py
tests/unit/: test_app.py  test_auth.py  test_compositing.py  test_content_generator.py  test_example.py  test_image_processor.py  test_inpainter.py  test_scrape_display.py  test_scraper.py
