[project]
name = "peo-promotion-center"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "extra-streamlit-components>=0.1.81",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "langsmith>=0.7.17",
    "pillow>=12.1.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "simple-lama-inpainting>=0.1.0",
    "streamlit>=1.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peo_promotion_center"]

[tool.basedpyright]
exclude = [
    "tests",
    "**/__pycache__"
]

[tool.pytest.ini_options]
addopts = "-v --capture=no"
markers = [
    "integration: tests de integración que requieren credenciales externas",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
